--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
     "name": "cmake-tools-helper",
     "displayName": "CMake Tools Helper",
-    "description": "Enables cpptools to automatically know the information parsed by CMake Tools (e.g. include directories and defines)",
-    "version": "0.2.1",
-    "publisher": "maddouri",
+    "description": "Enables cpptools to automatically know the information parsed by CMake Tools (e.g. include directories and defines) Synced to the latest version of cmake-tools",
+    "version": "0.2.2",
+    "publisher": "SonglinPiao",
     "license": "BSD-3-Clause",
     "icon": "res/icon.png",
     "bugs": {
-        "url": "https://github.com/maddouri/vscode-cmake-tools-helper/issues"
+        "url": "https://github.com/piaosonglin1985/vscode-cmake-tools-helper/issues"
     },
-    "homepage": "https://github.com/maddouri/vscode-cmake-tools-helper/blob/master/README.md",
+    "homepage": "https://github.com/piaosonglin1985/vscode-cmake-tools-helper/blob/master/README.md",
     "repository": {
         "type": "git",
-        "url": "https://github.com/maddouri/vscode-cmake-tools-helper.git"
+        "url": "https://github.com/piaosonglin1985/vscode-cmake-tools-helper.git"
     },
     "engines": {
         "vscode": "^1.22.0"
@@ -32,9 +32,7 @@
         "onCommand:cmake.show_active_cmake_config_name",
         "onCommand:cmake.install_cmake",
         "onCommand:cmake.change_cmake_version",
-
         "workspaceContains:CMakeLists.txt",
-
         "onCommand:cmake.buildWithTarget",
         "onCommand:cmake.cleanConfigure",
         "onCommand:cmake.configure",
